# Emerald-Legacy-Revelations-Launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/layout/: Sidebar.tsx
src/components/modals/: ReinstallModal.tsx
src/components/views/: FirstRunView.tsx  HomeView.tsx  SettingsView.tsx  VersionsView.tsx
src/hooks/: useAudio.ts  useGameInstances.ts
src/services/: tauri.ts
src/types/: index.ts
